Rafactor to 2 stages instead of barier